fix bug dashboard

--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -56,6 +56,13 @@
             <mat-icon>build</mat-icon>
             Timesheet
           </button>
+
+          <button mat-menu-item [routerLink]="'/demande-conge'">
+            <mat-icon>work_off</mat-icon>
+            Demande de congé
+          </button>
+          
+
           <button mat-menu-item (click)="signOut()">
             <mat-icon>logout</mat-icon>
             {{ 'layout.menu.sign-out' | transloco }}
